// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly for cloudy 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <div
    className="sc-bdfBwQ jlnUAq"
    color="cloudy"
  />
</div>
`;

exports[`Renders correctly for fog 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <div
    className="sc-bdfBwQ cyFUSF"
    color="fog"
  />
</div>
`;

exports[`Renders correctly for mist 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <div
    className="sc-bdfBwQ cRmnOk"
    color="mist"
  />
</div>
`;

exports[`Renders correctly for rain 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <div
    className="sc-bdfBwQ jtWZpm"
    color="rain"
  />
</div>
`;

exports[`Renders correctly for sleet 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <div
    className="sc-bdfBwQ cWnJKE"
    color="sleet"
  />
</div>
`;

exports[`Renders correctly for snow 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <div
    className="sc-bdfBwQ eSAyLg"
    color="snow"
  />
</div>
`;

exports[`Renders correctly for sunny 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <div
    className="sc-bdfBwQ emqQwp"
    color="sunny"
  />
</div>
`;

exports[`Renders correctly for thunder 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <div
    className="sc-bdfBwQ bXzjgO"
    color="thunder"
  />
</div>
`;
